--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
-dist
+
+# Optional output directories
+# Remove "dist" if this is required for deployment
 dist-ssr
 *.local
 
